--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,5 +30,5 @@ jobs:
           name: Run unit tests
           command: |
             export PATH=$PATH:$HOME/.local/bin
-            coverage run --source ffc -m pytest test/
+            coverage run --source ffc -m pytest -s test/
             coveralls
