Use cffi as the only JIT compiler (#102)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,5 +30,10 @@ jobs:
           name: Run unit tests
           command: |
             export PATH=$PATH:$HOME/.local/bin
-            coverage run --source ffc -m pytest -s test/
+            coverage run --source ffc -m pytest -s -v test/
             coveralls
+      - run:
+          name: Rerun tests (check caching)
+          command: |
+            export PATH=$PATH:$HOME/.local/bin
+            python3 -m pytest -s -v test/
