--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
             pip install git+https://bitbucket.org/fenics-project/fiat.git --user
             pip install git+https://bitbucket.org/fenics-project/ufl.git --user
             pip install git+https://bitbucket.org/fenics-project/dijitso.git --user
+	    pip install llvmlite --user
       - run:
           name: Install FFC
           command: pip install . --user -v
