Point to github

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,7 @@ jobs:
           name: Install FEniCS dependencies
           command: |
             pip install git+https://bitbucket.org/fenics-project/fiat.git --user
-            pip install git+https://bitbucket.org/fenics-project/ufl.git --user
-            pip install git+https://bitbucket.org/fenics-project/dijitso.git --user
+            pip install git+https://github.com/FEniCS/ufl.git --user
       - run:
           name: Install FFC
           command: pip install . --user -v
