--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: Install FEniCS dependencies
           command: |
-            pip install git+https://bitbucket.org/fenics-project/fiat.git --user
+            pip install git+https://github.com/FEniCS/fiat.git --user
             pip install git+https://github.com/FEniCS/ufl.git --user
       - run:
           name: Install FFC
