--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,9 +14,8 @@ jobs:
       - run:
           name: Install FEniCS dependencies
           command: |
-            pip install git+https://bitbucket.org/fenics-project/fiat.git --user
-            pip install git+https://bitbucket.org/fenics-project/ufl.git --user
-            pip install git+https://bitbucket.org/fenics-project/dijitso.git --user
+            pip install git+https://github.com/FEniCS/fiat.git --user
+            pip install git+https://github.com/FEniCS/ufl.git --user
       - run:
           name: Install FFC
           command: pip install . --user -v
