--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 cffi
--e git+https://bitbucket.org/fenics-project/fiat.git#egg=fiat
--e git+https://bitbucket.org/fenics-project/ufl.git#egg=ufl
+-e git+https://github.com/FEniCS/fiat.git#egg=fiat
+-e git+https://github.com/FEniCS/ufl.git#egg=ufl
