Remove Boost from CI container (#167)
* Remove boost and run tests in parallel.

* Tweak apt-get install.

* Add pytest-xdist.

* Undo parallel test run

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            sudo apt-get update && sudo apt-get install libboost-math-dev graphviz libgraphviz-dev
+            sudo apt-get update && sudo apt-get install --no-install-recommends graphviz libgraphviz-dev
             sudo pip install cffi flake8 pydocstyle pytest pygraphviz coverage coveralls --upgrade
       - run:
           name: Install FEniCS dependencies
