--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,14 @@ jobs:
   build:
     docker:
       - image: circleci/python:3.7
-    working_directory:  ~/ffc-test
+    working_directory: ~/ffc-test
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: |
             sudo apt-get update && sudo apt-get install --no-install-recommends graphviz libgraphviz-dev
-            sudo pip install cffi flake8 pydocstyle pytest pygraphviz coverage coveralls --upgrade
+            sudo pip install cffi flake8 pydocstyle pytest pytest-cov pytest-xdist pygraphviz coveralls --upgrade
       - run:
           name: Install FEniCS dependencies
           command: |
@@ -29,10 +29,5 @@ jobs:
           name: Run unit tests
           command: |
             export PATH=$PATH:$HOME/.local/bin
-            coverage run --source ffc -m pytest -v test/
+            python -m pytest --cov=ffc/ -n 4 -v test/
             coveralls
-      - run:
-          name: Rerun tests (check caching)
-          command: |
-            export PATH=$PATH:$HOME/.local/bin
-            python3 -m pytest -v test/
