--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
           command: python -m flake8 ffc/ test/
       - run:
           name: Run pydocstyle tests
-          command: python -m pydocstyle --ignore=D417 .
+          command: python -m pydocstyle .
       - run:
           name: Run unit tests
           command: |
