fix pydocstyle errors

--- a/ffc/git_commit_hash.py.in
+++ b/ffc/git_commit_hash.py.in
@@ -6,5 +6,5 @@
 
 
 def git_commit_hash():
-    """Return git changeset hash (returns "unknown" if changeset is not known)"""
+    """Return git changeset hash (returns "unknown" if changeset is not known)."""
     return "@GIT_COMMIT_HASH"
