--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           name: Install dependencies
           command: |
             sudo apt-get update && sudo apt-get install --no-install-recommends graphviz libgraphviz-dev
-            sudo pip install cffi flake8 pydocstyle pytest pytest-cov pytest-xdist pygraphviz 'coveralls<1.9' --upgrade
+            sudo pip install cffi flake8 pydocstyle pytest pytest-cov pytest-xdist pygraphviz coveralls --upgrade
       - run:
           name: Install FEniCS dependencies
           command: |
@@ -29,5 +29,5 @@ jobs:
           name: Run unit tests
           command: |
             export PATH=$PATH:$HOME/.local/bin
-            python -m pytest --cov=ffc/ -n 4 -v test/
+            coverage run -m pytest --cov=ffc/ -n 4 -v test/
             coveralls
