--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,3 +31,7 @@ jobs:
             export PATH=$PATH:$HOME/.local/bin
             python -m pytest --cov=ffc/ -n 4 -v test/
             coveralls
+      - run:
+          name: Run demos
+          command: |
+            ffc demo/*.ufl -v
