--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,8 @@ jobs:
           name: Run unit tests
           command: |
             export PATH=$PATH:$HOME/.local/bin
-            python -m pytest --cov=ffcx/ -n 4 -v test/
+            cd test/
+            python -m pytest --cov=ffcx/ -n 4 -v .
             coveralls
       - run:
           name: Run demos
