--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -33,6 +33,9 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
           flake8 ffcx/ test/
+      - name: Install ffcx
+        run: |
+          pip install .
       - name: Test with pytest
         run: |
           pip install pytest
