Try install graphviz.

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -38,6 +38,7 @@ jobs:
           pip install .
       - name: Test with pytest
         run: |
+          apt-get install graphviz
           pip install pygraphviz
           pip install pytest
           pytest
