--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -38,7 +38,7 @@ jobs:
           pip install .
       - name: Install test dependencies
         run: |
-          sudo apt-get update graphviz
+          sudo apt-get update
           sudo apt-get install graphviz
       - name: Test with pytest
         run: |
