--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -38,5 +38,5 @@ jobs:
           pip install .
       - name: Test with pytest
         run: |
-          pip install pytest
-          pytest
+          pip install pytest pytest-xdist
+          pytest -n 4
