Add some more steps.

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -27,12 +27,16 @@ jobs:
           # pip install -r requirements.txt
       - name: Lint with flake8
         run: |
-          pip install flake8
+          pip install flake8 --statistics
           # stop the build if there are Python syntax errors or undefined names
           # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
           flake8 ffcx/ test/
+      - name: Check documentation style
+        run: |
+          pip install pydocstyle
+          python -m pydocstyle .
       - name: Install ffcx
         run: |
           pip install .
@@ -40,3 +44,6 @@ jobs:
         run: |
           pip install pytest pytest-xdist
           pytest -n 4
+      - name: Runs demos
+        run: |
+          ffcx demo/*.ufl
