Add coverage testing.

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -45,8 +45,9 @@ jobs:
           pip install .
       - name: Test with pytest
         run: |
-          pip install pytest pytest-xdist
-          pytest -n 4 --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+          pip install coveralls coverage pytest pytest-cov pytest-xdist
+          pytest -n 4 -cov=ffcx/ --junitxml=junit/test-results-${{ matrix.python-version }}.xml test/
+          coveralls
       - name: Upload pytest test results
         uses: actions/upload-artifact@master
         with:
