--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,5 +1,6 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+# This workflow will install Python dependencies, run tests and lint
+# with a single version of Python For more information see:
+# https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
 name: Python application
 
@@ -14,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.7, 3.8]
 
     steps:
@@ -46,14 +48,15 @@ jobs:
       - name: Test with pytest
         run: |
           pip install coveralls coverage pytest pytest-cov pytest-xdist
-          pytest -n 4 -cov=ffcx/ --junitxml=junit/test-results-${{ matrix.python-version }}.xml test/
+          pytest -n 4 --cov=ffcx/ --junitxml=junit/test-results-${{ matrix.python-version }}.xml test/
           coveralls
       - name: Upload pytest test results
         uses: actions/upload-artifact@master
         with:
           name: pytest-results-${{ matrix.python-version }}
           path: junit/test-results-${{ matrix.python-version }}.xml
-        # Use always() to always run this step to publish test results when there are test failures
+        # Use always() to always run this step to publish test results
+        # when there are test failures
         if: always()
       - name: Runs demos
         run: |
