--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
         python-version: [3.7, 3.8]
 
     steps:
@@ -50,14 +50,14 @@ jobs:
           pip install coveralls coverage pytest pytest-cov pytest-xdist
           pytest -n 4 --cov=ffcx/ --junitxml=junit/test-results-${{ matrix.python-version }}.xml test/
           coveralls
-      - name: Upload pytest test results
-        uses: actions/upload-artifact@master
-        with:
-          name: pytest-results-${{ matrix.python-version }}
-          path: junit/test-results-${{ matrix.python-version }}.xml
-        # Use always() to always run this step to publish test results
-        # when there are test failures
-        if: always()
+      # - name: Upload pytest test results
+      #   uses: actions/upload-artifact@master
+      #   with:
+      #     name: pytest-results-${{ matrix.python-version }}
+      #     path: junit/test-results-${{ matrix.python-version }}.xml
+      #   # Use always() to always run this step to publish test results
+      #   # when there are test failures
+      #   if: always()
       - name: Runs demos
         run: |
           ffcx demo/*.ufl
