--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,6 +26,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          echo $OSTYPE
           python -m pip install --upgrade pip
           pip install git+https://github.com/FEniCS/fiat.git --user
           pip install git+https://github.com/FEniCS/ufl.git --user
