--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          apt-get update && apt-get install -y graphviz libgraphviz-dev pkg-config
+          sudo apt-get update && apt-get install -y graphviz libgraphviz-dev pkg-config
           python -m pip install --upgrade pip
           pip install pygraphviz
           pip install git+https://github.com/FEniCS/fiat.git --user
