--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -12,7 +12,8 @@ jobs:
     strategy:
       matrix:
         # os: [ubuntu-latest, macos-latest]
-        os: [ubuntu-latest]
+        # os: [ubuntu-latest]
+        os: [macos-latest]
         python-version: [3.7, 3.8]
 
     steps:
@@ -21,10 +22,13 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install dependencies (non-Python)
         run: |
-          sudo apt-get update
-          sudo apt-get install -y graphviz libgraphviz-dev pkg-config
+          # sudo apt-get update
+          # sudo apt-get install -y graphviz libgraphviz-dev pkg-config
+          brew install graphviz
+      - name: Install dependencies (Python)
+        run: |
           python -m pip install --upgrade pip
           pip install pygraphviz
           pip install git+https://github.com/FEniCS/fiat.git --user
