--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           # sudo apt-get update
           # sudo apt-get install -y graphviz libgraphviz-dev pkg-config
-          brew install graphviz
+          brew install graphviz pkg-config
       - name: Install dependencies (Python)
         run: |
           python -m pip install --upgrade pip
