--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
         # os: [ubuntu-latest]
-        os: [macos-latest]
+        # os: [macos-latest]
         python-version: [3.7, 3.8]
 
     steps:
@@ -22,11 +22,14 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies (non-Python)
+      - name: Install dependencies (non-Python, Linux)
+        if: runner.os == 'Linux'
         run: |
-          # sudo apt-get update
-          # sudo apt-get install -y graphviz libgraphviz-dev pkg-config
-          brew install graphviz pkg-config
+          sudo apt-get update
+          sudo apt-get install -y graphviz libgraphviz-dev pkg-config
+      - name: Install dependencies (non-Python, macOS)
+        if: runner.os == 'macOS'
+        run: brew install graphviz pkg-config
       - name: Install dependencies (Python)
         run: |
           python -m pip install --upgrade pip
