Fix flake after updates

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,8 @@ log_cli=1
 [flake8]
 max-line-length = 120
 exclude = .git,__pycache__,docs/source/conf.py,build,dist,libs
-ignore = W503  # Line length
+ignore = W503,  # Line length
+         E741  # Variable names l, O, I, ...
 
 [yapf]
 column_limit = 100
