--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -12,14 +12,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        # os: [ubuntu-latest]
-        # os: [macos-latest]
         python-version: [3.7, 3.8]
 
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies (non-Python, Linux)
@@ -51,7 +49,7 @@ jobs:
         run: |
           pip install coveralls coverage pytest pytest-cov pytest-xdist
           pytest -n=4 --cov=ffcx/ --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml test/
-          # coveralls
+          coveralls
       - name: Upload pytest test results
         uses: actions/upload-artifact@master
         with:
