--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Run units tests
         run: |
           pip install coveralls coverage pytest pytest-cov pytest-xdist
-          pytest -n=4 --cov=ffcx/ --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml test/
+          pytest -n auto --cov=ffcx/ --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml test/
       - name: Upload to Coveralls
         if: ${{ github.repository == 'FEniCS/ffcx' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
         env:
