--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -12,14 +12,12 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        # os: [ubuntu-latest]
-        # os: [macos-latest]
         python-version: [3.7, 3.8]
 
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies (non-Python, Linux)
@@ -32,7 +30,7 @@ jobs:
         run: brew install graphviz pkg-config
       - name: Install dependencies (Python)
         run: |
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
           pip install pygraphviz
           pip install git+https://github.com/FEniCS/fiat.git --user
           pip install git+https://github.com/FEniCS/ufl.git --user
@@ -43,15 +41,19 @@ jobs:
       - name: Check documentation style
         run: |
           pip install pydocstyle
-          python -m pydocstyle .
+          pydocstyle .
       - name: Install ffcx
         run: |
           pip install .
-      - name: Test with pytest
+      - name: Run units tests
         run: |
           pip install coveralls coverage pytest pytest-cov pytest-xdist
-          pytest -n=4 --cov=ffcx/ --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml test/
-          # coveralls
+          pytest -n auto --cov=ffcx/ --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml test/
+      - name: Upload to Coveralls
+        if: ${{ github.repository == 'FEniCS/ffcx' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        run: coveralls
       - name: Upload pytest test results
         uses: actions/upload-artifact@master
         with:
