--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -54,8 +54,8 @@ jobs:
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         run: |
+          echo $GITHUB_REPOSITORY $GITHUB_REF $GITHUB_HEAD_REF $GITHUB_BASE_REF
           coveralls
-          echo $GITHUB_REF
       - name: Upload pytest test results
         uses: actions/upload-artifact@master
         with:
