--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -50,12 +50,10 @@ jobs:
           pip install coveralls coverage pytest pytest-cov pytest-xdist
           pytest -n auto --cov=ffcx/ --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml test/
       - name: Upload to Coveralls
-        if: ${{ github.repository == 'FEniCS/ffcx' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
+        if: ${{ github.head_ref == '' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
-        run: |
-          echo $GITHUB_REPOSITORY $GITHUB_REF $GITHUB_HEAD_REF $GITHUB_BASE_REF
-          coveralls
+        run: coveralls
       - name: Upload pytest test results
         uses: actions/upload-artifact@master
         with:
