--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -24,10 +24,10 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y graphviz libgraphviz-dev pkg-config
+          sudo apt-get install -y graphviz libgraphviz-dev pkg-config libeigen3
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
-        run: brew install graphviz pkg-config
+        run: brew install graphviz pkg-config eigen
       - name: Install dependencies (Python)
         run: |
           pip install --upgrade pip
