--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -24,7 +24,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y graphviz libgraphviz-dev pkg-config libeigen3
+          sudo apt-get install -y graphviz libgraphviz-dev pkg-config libeigen3-dev
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
         run: brew install graphviz pkg-config eigen
