--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -63,7 +63,6 @@ jobs:
         # Use always() to always run this step to publish test results
         # when there are test failures
         if: always()
-      - name: 
       - name: Runs demos
         run: |
           ffcx demo/*.ufl
@@ -77,8 +76,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: doc
-          path: |
-            doc/build/html/
+          path: doc/build/html/
           retention-days: 2
           if-no-files-found: error
       - name: Checkout FEniCS/docs
