Only run on master, remove C++ mention.

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -86,7 +86,7 @@ jobs:
           path: "docs"
           ssh-key: "${{ secrets.SSH_GITHUB_DOCS_PRIVATE_KEY }}"
       - name: Push documentation to repository FEniCS/docs
-        if: ${{ github.repository == 'FEniCS/ffcx' && runner.os == 'linux' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
+        if: ${{ github.repository == 'FEniCS/ffcx' && github.ref == 'refs/heads/master' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
         run: |
           git config --global user.email "fenics@github.com"
           git config --global user.name "FEniCS GitHub Actions"
@@ -94,5 +94,5 @@ jobs:
           cp -r doc/build/html/* docs/ffcx/
           cd docs
           git add --all
-          git commit --allow-empty -m "C++ and Python FEniCS/ffcx@${{ github.sha }}"
+          git commit --allow-empty -m "Python FEniCS/ffcx@${{ github.sha }}"
           git push
