--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Upload documentation artifact
         uses: actions/upload-artifact@v2
         with:
-          name: doc
+          name: doc-${{ matrix.os }}-${{ matrix.python-version }}
           path: doc/build/html/
           retention-days: 2
           if-no-files-found: error
