--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -88,11 +88,12 @@ jobs:
       - name: Push documentation to repository FEniCS/docs
         if: ${{ github.repository == 'FEniCS/ffcx' && github.ref == 'refs/heads/master' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
         run: |
+          cd docs
           git config --global user.email "fenics@github.com"
           git config --global user.name "FEniCS GitHub Actions"
-          mkdir -p docs/ffcx
-          cp -r doc/build/html/* docs/ffcx/
-          cd docs
+          mkdir -p ffcx/master
+          git rm -r ffcx/master/*
+          cp -r ../doc/build/html/* ffcx/master
           git add --all
           git commit --allow-empty -m "Python FEniCS/ffcx@${{ github.sha }}"
           git push
