--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install pygraphviz
-          pip install git+https://github.com/FEniCS/basix.git --user
+          pip install git+https://github.com/FEniCS/basix.git@chris/quadrature-update --user
           pip install git+https://github.com/FEniCS/ufl.git --user
       - name: Lint with flake8
         run: |
