Transition to basix library for finite element definitions (#296)
* add some debug

* Comment out some stuff

* Start on libtab_interface

* Add simple libtab_interface

* flake8

* Add return value to make code compile

* Provide more alternatives to fiat_element

* Provide more alternatives to fiat_element

* tidy and more print debug

* Reshape for tensor elements

* Removing fiat, adding libtab

* libtab

* eigen

* -dev

* Replaceing fiat with libtab

* flake

* more flake

* remove fiat requirement

* remove fiat from tests

* use libtabbaseelement

* Add value_shape TODO

* Working on updating dof permutations

* Reimplementing more functionality using libtab

* return more features

* turn off tests for element not implemented yet in libtab

* update more tests

* get permutation data to pass around correctly

* implementing dof permutations

* flake

* comment out import

* entity dofs

* vertex quadrature

* celltype -> cellname

* fixing entity dofs and quadrature

* flake

* Reimplement more stuff

* Get tabulate_reference_basis_derivatives working

* remove evaluate_*

* flake

* remove unused import

* contiguous

* use fstrings

* more fstrings

* even more fstrings

* missing )

* family names

* Remove no longer used code

* mt_averaged -> mt.averaged

* Reintroduce more functionality

* Run demos using pytest

* use gcc compilation in demo test

* block size corrections

* Replace ndofs with dim

* Replace ndofs with dim

* Added tests that tabulate tensor is correct for Lagrange spaces

* install sympy for testing

* Put table data from before permutations were applied into conditionals

* add interpolation to generated code

* correct interpolation and interpolation test

* flake

* libtab branch

* update to match libtab interpolation renaming

* add needs_permutation_data to element

* correct indices

* back to master

--- a/.gitignore
+++ b/.gitignore
@@ -46,9 +46,20 @@ install_manifest.txt
 # Visual Studio Code project config
 .vscode
 
+# c, h and so files due to running demos
+demo/*.c
+demo/*.h
+demo/*.so
+test/*.c
+test/*.h
+test/*.so
+
 # Tests
 **/.cache/
 __pycache__
+test/compile-cache/
+test/libffcx_*
+test/*.pdf
 
 # setuptools temps
 *.egg-info/
