--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -32,11 +32,11 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y graphviz libgraphviz-dev pkg-config libeigen3-dev
+          sudo apt-get install -y graphviz libgraphviz-dev ninja-build pkg-config libeigen3-dev
 
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
-        run: brew install graphviz pkg-config eigen
+        run: brew install graphviz ninja pkg-config eigen
 
       - name: Install dependencies (Python)
         run: |
