--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -43,7 +43,7 @@ jobs:
           cmake -G Ninja -B build-dir -S ./basix
           cmake --build build-dir
           sudo cmake --install build-dir
-          pip -m pip install ./basix/python
+          pip install ./basix/python
           pip install --upgrade pip
           pip install pygraphviz
           pip install git+https://github.com/FEniCS/basix.git --user
