--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
         python-version: [3.7, 3.8, 3.9]
 
     steps:
@@ -20,41 +20,60 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Get Basix and install
+        uses: actions/checkout@v2
+        with:
+          path: ./basix
+          repository: FEniCS/basix
+          ref: main
+
       - name: Install dependencies (non-Python, Linux)
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install -y graphviz libgraphviz-dev pkg-config libeigen3-dev
+          sudo apt-get install -y graphviz libgraphviz-dev ninja-build pkg-config libeigen3-dev
+
       - name: Install dependencies (non-Python, macOS)
         if: runner.os == 'macOS'
-        run: brew install graphviz pkg-config eigen
+        run: brew install graphviz ninja pkg-config eigen
+
       - name: Install dependencies (Python)
         run: |
           pip install --upgrade pip
+          cmake -G Ninja -DCMAKE_BUILD_TYPE=Developer -B build-dir -S ./basix
+          cmake --build build-dir
+          sudo cmake --install build-dir
+          pip install ./basix/python
           pip install pygraphviz
-          pip install git+https://github.com/FEniCS/basix.git --user
           pip install git+https://github.com/FEniCS/ufl.git --user
+
       - name: Lint with flake8
         run: |
           pip install flake8
           flake8 --statistics ffcx/ test/
+
       - name: Check documentation style
         run: |
           pip install pydocstyle
           pydocstyle .
+
       - name: Install ffcx
         run: |
           pip install .
+
       - name: Run units tests
         run: |
           pip install coveralls coverage pytest pytest-cov pytest-xdist sympy
           pytest -n auto --cov=ffcx/ --junitxml=junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml test/
+
       - name: Upload to Coveralls
         if: ${{ github.repository == 'FEniCS/ffcx' && github.head_ref == '' && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.8' }}
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         run: |
           coveralls
+
       - name: Upload pytest test results
         uses: actions/upload-artifact@master
         with:
@@ -63,6 +82,7 @@ jobs:
         # Use always() to always run this step to publish test results
         # when there are test failures
         if: always()
+
       - name: Runs demos
         run: |
           python${{ matrix.python-version }} -m pytest demo/test_demos.py
@@ -72,6 +92,7 @@ jobs:
           pip install sphinx sphinx_rtd_theme
           cd doc
           make html
+
       - name: Upload documentation artifact
         uses: actions/upload-artifact@v2
         with:
