--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           path: ./basix
           repository: FEniCS/basix
-          ref: mscroggs/base_trans
+          ref: main
 
       - name: Install dependencies (non-Python, Linux)
         if: runner.os == 'Linux'
