--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -48,6 +48,12 @@ jobs:
           pip install pygraphviz
           pip install git+https://github.com/FEniCS/ufl.git --user
 
+      - name: Install ffcx
+        run: |
+          pip install .
+
+      - run: python3 run_me.py
+
       - name: Lint with flake8
         run: |
           pip install flake8
