Remove basix source

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -45,6 +45,7 @@ jobs:
           cmake --build build-dir
           sudo cmake --install build-dir
           pip install ./basix/python
+          rm -rf basix
           pip install pygraphviz
           pip install git+https://github.com/FEniCS/ufl.git --user
 
